# qgis-venv-creator

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  ruff_defaults.toml
.github/workflows/: release.yml  release_pr.yml  test.yml
src/qgis_venv_creator/: __about__.py  create_qgis_venv.py
tests/: conftest.py
tests/e2e/: __init__.py  test_venv_creation_linux.py  test_venv_creation_win.py
tests/unit/: test_prompt.py
